Update the version-number to 0.0.4.

--- a/src/Semver/Semver.csproj
+++ b/src/Semver/Semver.csproj
@@ -1,29 +1,24 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>Acklann.Semver</AssemblyName>
     <RootNamespace>Acklann.Semver</RootNamespace>
     <LangVersion>7.2</LangVersion>
   </PropertyGroup>
-	
   <PropertyGroup Label="Package">
-    <PackageVersion>0.0.3</PackageVersion>
-    <AssemblyVersion>0.0.3</AssemblyVersion>
-
-		<Company>Ackara</Company>
+    <PackageVersion>0.0.4</PackageVersion>
+    <AssemblyVersion>0.0.4</AssemblyVersion>
+    <Company>Ackara</Company>
     <Authors>Ackara</Authors>
     <Copyright>Ackara Copyright 2019</Copyright>
-
-		<PackageProjectUrl>https://github.com/Ackara/Semver</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/Ackara/Semver</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Ackara/Semver.git</RepositoryUrl>
     <PackageTags>semantic version</PackageTags>
   </PropertyGroup>
-	
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <DocumentationFile>$(OutputPath)$(AssemblyName).xml</DocumentationFile>
   </PropertyGroup>
-
-	<ItemGroup>
+  <ItemGroup>
     <PackageReference Include="System.Memory" Version="4.5.3" />
   </ItemGroup>
 </Project>
