--- a/src/Semver/Semver.csproj
+++ b/src/Semver/Semver.csproj
@@ -5,9 +5,13 @@
     <RootNamespace>Acklann.Semver</RootNamespace>
     <LangVersion>7.2</LangVersion>
   </PropertyGroup>
+  <PropertyGroup>
+    <Description>A comprehensive implementation of Semantic Version (https://semver.org/).</Description>
+    <PackageIconUrl>https://raw.githubusercontent.com/Ackara/Semver/master/art/semver.svg</PackageIconUrl>
+  </PropertyGroup>
   <PropertyGroup Label="Package">
-    <PackageVersion>0.0.4</PackageVersion>
-    <AssemblyVersion>0.0.4</AssemblyVersion>
+    <PackageVersion>0.0.5</PackageVersion>
+    <AssemblyVersion>0.0.5</AssemblyVersion>
     <Company>Ackara</Company>
     <Authors>Ackara</Authors>
     <Copyright>Ackara Copyright 2019</Copyright>
