--- a/src/Semver/Semver.csproj
+++ b/src/Semver/Semver.csproj
@@ -5,16 +5,14 @@
     <RootNamespace>Acklann.Semver</RootNamespace>
     <LangVersion>7.2</LangVersion>
   </PropertyGroup>
-  <PropertyGroup>
-    <Description>A comprehensive implementation of Semantic Version (https://semver.org/).</Description>
-    <PackageIconUrl>https://raw.githubusercontent.com/Ackara/Semver/master/art/semver.svg</PackageIconUrl>
-  </PropertyGroup>
   <PropertyGroup Label="Package">
-    <PackageVersion>0.0.5</PackageVersion>
-    <AssemblyVersion>0.0.5</AssemblyVersion>
+    <PackageVersion>0.0.6</PackageVersion>
+    <AssemblyVersion>0.0.6</AssemblyVersion>
+    <Description>A comprehensive implementation of Semantic Version (https://semver.org/).</Description>
     <Company>Ackara</Company>
     <Authors>Ackara</Authors>
-    <Copyright>Ackara Copyright 2019</Copyright>
+    <Copyright>Copyright Ackara 2019</Copyright>
+    <PackageIconUrl>https://raw.githubusercontent.com/Ackara/Semver/master/art/semver.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/Ackara/Semver</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Ackara/Semver.git</RepositoryUrl>
     <PackageTags>semantic version</PackageTags>
